# Pharma-side-effects

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
src/pharma_side_effects/: __init__.py  cli.py  config.py
src/pharma_side_effects/data/: __init__.py  categories.py  loader.py
src/pharma_side_effects/evaluation/: __init__.py  metrics.py  plots.py
src/pharma_side_effects/features/: __init__.py  numeric.py  text.py
src/pharma_side_effects/models/: __init__.py  logistic_regression.py  random_forest.py  registry.py
src/pharma_side_effects/pipelines/: __init__.py  predict.py  preprocess.py  train.py
src/pharma_side_effects/utils/: __init__.py  logging.py
tests/: conftest.py  test_categories.py  test_data_loader.py  test_features.py  test_models.py  test_pipelines.py
